Observação para o dia 2

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Rem eaque odit est deleniti neque vero enim quae soluta 
                     pariatur vitae doloremque ab repudiandae omnis voluptatibus
-                     doloribus culpa quisquam, consequatur harum!
+                    doloribus culpa quisquam, consequatur harum!
                 </p>
                 <a href="#">COMPRE AGORA</a>
             </div>
@@ -168,3 +168,4 @@
     </footer>
 </body>
 </html>
+<!-- OBS.: Adicionar descrição UP e endereço completo -->
